--- a/src/template.html
+++ b/src/template.html
@@ -5,7 +5,28 @@
     <title>Title</title>
 </head>
 <body>
-<h3>Testing</h3>
+<!--<label for="myDate">Select a date:</label>
+<input type="date" id="myDate" name="myDate">
+<button id="dateButton">Click Me</button>-->
+
+    <nav>
+        <h1>Todo List</h1>
+    </nav>
+
+    <main>
+        <div id="sidebar">
+            <h1>Sidebar</h1>
+        </div>
+        <div id="content">
+            <h1>Main Content</h1>
+        </div>
+    </main>
+
+    <footer>
+        <h1>Footer</h1>
+    </footer>
+
+
 
 </body>
 </html>
