Contunued working on HTML page, nav options and logos are present

--- a/src/template.html
+++ b/src/template.html
@@ -10,12 +10,29 @@
 <button id="dateButton">Click Me</button>-->
 
     <nav>
-        <h1>Todo List</h1>
+        <h1>CheckMate</h1>
     </nav>
 
     <main>
         <div id="sidebar">
-            <h1>Sidebar</h1>
+            <h1>Home</h1>
+            <hr>
+            <span>
+                <img src="./assets/inbox.png">
+                <h3>All Tasks</h3>
+            </span>
+            <span>
+
+                <h3>Today</h3>
+            </span>
+            <span>
+
+                <h3>Next 7 Days</h3>
+            </span>
+            <br>
+            <h1>Projects</h1>
+            <hr>
+
         </div>
         <div id="content">
             <h1>Main Content</h1>
@@ -23,7 +40,10 @@
     </main>
 
     <footer>
-        <h1>Footer</h1>
+        <h1>
+            Icons by <a target="_blank" href="https://icons8.com">Icons8</a>
+        </h1>
+
     </footer>
 
 
