Added checkmate logo

--- a/src/template.html
+++ b/src/template.html
@@ -10,32 +10,49 @@
 <button id="dateButton">Click Me</button>-->
 
     <nav>
-        <h1>CheckMate</h1>
+        <span class="options">
+            <img id="logo">
+            <h1>CheckMate</h1>
+        </span>
     </nav>
 
     <main>
         <div id="sidebar">
-            <h1>Home</h1>
+            <span class="options">
+                <h1>Home</h1>
+                <img class="nav-img" id="home">
+            </span>
             <hr>
-            <span>
-                <img src="./assets/inbox.png">
+            <span class="options">
+                <img class="nav-img" id="inbox">
                 <h3>All Tasks</h3>
             </span>
-            <span>
-
+            <span class="options">
+                <img class="nav-img" id="today">
                 <h3>Today</h3>
             </span>
-            <span>
-
+            <span class="options">
+                <img class="nav-img" id="7days">
                 <h3>Next 7 Days</h3>
+            </span>
+            <span class="options">
+                <img class="nav-img" id="important">
+                <h3>Important</h3>
             </span>
             <br>
             <h1>Projects</h1>
             <hr>
+            <span class="options">
+                <img class="nav-img" id="add-project">
+                <h3>New Project</h3>
+            </span>
+
 
         </div>
         <div id="content">
-            <h1>Main Content</h1>
+            <div id="content-title">
+                <h1>Main Content</h1>
+            </div>
         </div>
     </main>
 
