Moved different JS files in sub folders to seperate based on whether the file is an entity or a service file

--- a/src/template.html
+++ b/src/template.html
@@ -51,8 +51,26 @@
         </div>
         <div id="content">
             <div id="content-title">
-                <h1>Main Content</h1>
+                <h1 id="current-title">Main Content</h1>
             </div>
+
+            <div id="all-task-content">
+                <h1>All Tasks</h1>
+            </div>
+
+            <div id="today-content">
+                <h1>Today</h1>
+            </div>
+
+            <div id="7days-content">
+                <h1>Seven Days</h1>
+            </div>
+
+            <div id="important-content">
+                <h1>Important</h1>
+            </div>
+
+
         </div>
     </main>
 
