Centred nav and footer items

--- a/src/template.html
+++ b/src/template.html
@@ -18,24 +18,24 @@
 
     <main>
         <div id="sidebar">
-            <span class="options">
-                <h1>Home</h1>
+            <div id="home-div" class="options">
+                <h1 id="home-text">Home</h1>
                 <img class="nav-img" id="home">
-            </span>
+            </div>
             <hr>
-            <span class="options">
+            <span id="all-tasks-button" class="options">
                 <img class="nav-img" id="inbox">
                 <h3>All Tasks</h3>
             </span>
-            <span class="options">
+            <span id="today-button" class="options">
                 <img class="nav-img" id="today">
                 <h3>Today</h3>
             </span>
-            <span class="options">
+            <span id="7days-button" class="options">
                 <img class="nav-img" id="7days">
                 <h3>Next 7 Days</h3>
             </span>
-            <span class="options">
+            <span id="important-button" class="options">
                 <img class="nav-img" id="important">
                 <h3>Important</h3>
             </span>
@@ -75,9 +75,12 @@
     </main>
 
     <footer>
-        <h1>
-            Icons by <a target="_blank" href="https://icons8.com">Icons8</a>
-        </h1>
+        <h2>
+            Icons by <a target="_blank" href="https://icons8.com">Icons8 </a>
+        </h2>
+        <h2 style="padding-left: 5px">  |</h2>
+        <h2>Github logo with link</h2>
+
 
     </footer>
 
