Worked on colour scheme, added github and linkeden anchor tags to footer, and started working on collopasabe sidebar

--- a/src/template.html
+++ b/src/template.html
@@ -12,10 +12,10 @@
     <nav>
         <span class="options">
             <img id="logo">
-            <h1>CheckMate</h1>
+            <h1><span id="check">Check</span><span id="mate">Mate</span></h1>
         </span>
     </nav>
-
+    <img class="nav-img" id="home-onclose">
     <main>
         <div id="sidebar">
             <div id="home-div" class="options">
@@ -79,7 +79,9 @@
             Icons by <a target="_blank" href="https://icons8.com">Icons8 </a>
         </h2>
         <h2 style="padding-left: 5px">  |</h2>
-        <h2>Github logo with link</h2>
+        <a href="https://github.com/Karmveer27" target="_blank"><img  id="github" class="footer-img"></a>
+        <h2 style="padding-left: 5px">  |</h2>
+        <a href="https://www.linkedin.com/in/karmveer-singh-474056236/" target="_blank"><img  id="linkedin" class="footer-img"></a>
 
 
     </footer>
