All Tasks now shows tasks dynamically on whats passed to services module

--- a/src/template.html
+++ b/src/template.html
@@ -55,7 +55,7 @@
             </div>
 
             <div id="all-task-content">
-                <h1>All Tasks</h1>
+                <!--<h1>All Tasks</h1>-->
             </div>
 
             <div id="today-content">
