Added functionality for next 7 days by adding methods to Date class, and methods in TaskLoader class

--- a/src/template.html
+++ b/src/template.html
@@ -62,7 +62,7 @@
                 <h1>Today</h1>
             </div>
 
-            <div id="7days-content">
+            <div id="seven-days-content">
                 <h1>Seven Days</h1>
             </div>
 
