Added functionality to let user add projects, and click to a project tab. I now have to allow users to add tasks to a project

--- a/src/template.html
+++ b/src/template.html
@@ -40,6 +40,9 @@
             <br>
             <h1>Projects</h1>
             <hr>
+            <span id="projectContainer">
+
+            </span>
             <span class="options" id="add-project-button">
                 <img class="nav-img" id="add-project">
                 <h3>New Project</h3>
@@ -66,6 +69,10 @@
 
             <div id="important-content">
                 <h1>Important</h1>
+            </div>
+
+            <div id="custom-content">
+
             </div>
 
             <div id="add-task">
