Users can now add tasks to custom projects but bug where I cant get the custom project page to reload if a user is already on it

--- a/src/template.html
+++ b/src/template.html
@@ -90,7 +90,9 @@
                         <option value="minor" selected>Minor</option>
                     </select>
                 </div>
-
+                <select id="formProject" name="cars" >
+                    <option value="none">None</option>
+                </select>
 
                 <button id="formButton">Click Me</button>
             </div>
