Added task editing ability

--- a/src/template.html
+++ b/src/template.html
@@ -99,6 +99,27 @@
                     <button id="formButton">Click Me</button>
                 </form>
 
+            <form id="edit-task">
+                <div>
+                    <label for="setTitle">Title</label>
+                    <input type="text" id="setTitle" name="setTitle"/>
+                </div>
+                <input type="text" id="setDescription" placeholder="Describe your task" />
+
+                <div>
+                    <label for="formDate"></label>
+                    <input type="date" id="setDate" name="formDate" >
+
+                    <select id="setPriority" name="cars" >
+                        <option value="important">Important</option>
+                        <option value="standard">Standard</option>
+                        <option value="minor" selected>Minor</option>
+                    </select>
+                </div>
+                <button id="editTaskButton">Confirm</button>
+
+            </form>
+
 
             <div id="new-project">
                 <h2>Add project</h2>
