--- a/src/template.html
+++ b/src/template.html
@@ -100,6 +100,10 @@
                 </form>
 
             <form id="edit-task">
+                <div class="option-title">
+                    <h3>Edit Task</h3>
+                    <img class="cross">
+                </div>
                 <div>
                     <label for="setTitle">Title</label>
                     <input type="text" id="setTitle" name="setTitle"/>
@@ -122,7 +126,10 @@
 
 
             <div id="new-project">
-                <h2>Add project</h2>
+                <div class="option-title">
+                    <h2>Add project</h2>
+                    <img class="cross">
+                </div>
                 <form id="projectForm">
                     <label for="projectName">Name</label>
                     <input type="text" name="projectName" id="projectName" placeholder="Enter a name"/>
