Updated icons to color white

--- a/src/template.html
+++ b/src/template.html
@@ -53,6 +53,10 @@
         <div id="content">
             <div id="content-title">
                 <h1 id="current-title">Main Content</h1>
+                <span id="add-task-button">
+                    <img id="plus">
+                    <h3>New Task</h3>
+                </span>
             </div>
 
             <div id="all-task-content">
@@ -61,6 +65,7 @@
 
             <div id="today-content">
                 <h1>Today</h1>
+
             </div>
 
             <div id="seven-days-content">
@@ -115,9 +120,9 @@
                     <input type="date" id="setDate" name="formDate" class="inputText">
 
                     <select id="setPriority" name="cars"  class="inputText">
-                        <option value="important">Important</option>
-                        <option value="standard">Standard</option>
-                        <option value="minor" selected>Minor</option>
+                        <option value="important" class="inputText">Important</option>
+                        <option value="standard" class="inputText">Standard</option>
+                        <option value="minor" selected class="inputText">Minor</option>
                     </select>
                 </div>
                 <button id="editTaskButton" class="inputText">Confirm</button>
@@ -150,6 +155,10 @@
                     <button id="projectButton" class="inputText">Add</button>
                 </form>
             </div>
+        </div>
+
+        <div id="doneContent">
+
         </div>
 
            </main>
