Added add task event listener

--- a/src/template.html
+++ b/src/template.html
@@ -83,7 +83,10 @@
 
 
                 <form id="add-task">
-                    <h1 >Add Task</h1>
+                    <div class="option-title">
+                        <h2>Add Task</h2>
+                        <img class="cross">
+                    </div>
                     <input type="text" id="formTitle" placeholder="Enter a title" class="inputText" />
                     <input type="text" id="formDescription" placeholder="Describe your task" class="inputText" />
 
