Updated custom project to h2 and adding margin-right

--- a/src/template.html
+++ b/src/template.html
@@ -144,15 +144,15 @@
 
                     <label for="colorSelect">Colour:</label>
                     <select id="colorSelect" name="colorSelect" class="inputText">
-                        <option value="white">White</option>
-                        <option value="black">Black</option>
-                        <option value="red">Red</option>
-                        <option value="blue">Blue</option>
-                        <option value="green">Green</option>
-                        <option value="yellow">Yellow</option>
-                        <option value="orange">Orange</option>
-                        <option value="purple">Purple</option>
-                        <option value="grey">Grey</option>
+                        <option value="white" class="inputText">White</option>
+                        <option value="black" class="inputText">Black</option>
+                        <option value="red" class="inputText">Red</option>
+                        <option value="blue" class="inputText">Blue</option>
+                        <option value="green" class="inputText">Green</option>
+                        <option value="yellow" class="inputText">Yellow</option>
+                        <option value="orange" class="inputText">Orange</option>
+                        <option value="purple" class="inputText">Purple</option>
+                        <option value="grey" class="inputText">Grey</option>
                     </select>
 
                     <button id="projectButton" class="inputText">Add</button>
