Fixed input validator functionality

--- a/src/template.html
+++ b/src/template.html
@@ -103,7 +103,7 @@
                     <select id="formProject" name="cars" class="inputText" >
                         <option value="none">None</option>
                     </select>
-
+                    <h3 id="taskError">Task Name Not Available</h3>
                     <button id="formButton" class="inputText">Click Me</button>
                 </form>
 
@@ -154,7 +154,7 @@
                         <option value="purple" class="inputText">Purple</option>
                         <option value="grey" class="inputText">Grey</option>
                     </select>
-
+                    <h3 id="projectError">Project Name Not Available!</h3>
                     <button id="projectButton" class="inputText">Add</button>
                 </form>
             </div>
