Added input validator to edit task

--- a/src/template.html
+++ b/src/template.html
@@ -128,6 +128,7 @@
                         <option value="minor" selected class="inputText">Minor</option>
                     </select>
                 </div>
+                <h3 id="taskEditError">Task Name Not Available</h3>
                 <button id="editTaskButton" class="inputText">Confirm</button>
 
             </form>
