Added inputText class to None option in add task

--- a/src/template.html
+++ b/src/template.html
@@ -104,7 +104,7 @@
                     </div>
                     <label for="formProject">Select Task's Project</label>
                     <select id="formProject" name="formProject" class="inputText" >
-                        <option value="none">None</option>
+                        <option value="none" class="inputText">None</option>
                     </select>
                     <h3 id="taskError">Task Name Not Available</h3>
                     <button id="formButton" class="inputText">Add Task</button>
